# tutorial-flask

./: .gitignore  MANIFEST.in  README.md  dump.sql  procfile  pyproject.toml  requirements.txt
borrowbooks/: __init__.py
borrowbooks/conexdb/: ciudad.sql  comuna.sql  conex.py  credentials.py  regiones.sql
borrowbooks/controller/: dto_escuela_categ.py  dto_libro.py  dto_perfil.py  dto_persona.py  dto_prestamo.py  dto_sede.py
borrowbooks/dao/: dao_escuela_categ.py  dao_libro.py  dao_persona.py  dao_prestamo.py
borrowbooks/model/: ejemplar.py  escuela_categ.py  libro.py  nota_prestamo.py  perfil.py  persona.py  sede.py
borrowbooks/static/css/: filtros.css  style.css
borrowbooks/templates/: base.html
borrowbooks/templates/auth/: register.html
borrowbooks/templates/dashboard/: asistente.html  book.html  encargado.html  gerente.html
borrowbooks/templates/dashboard/borrow/: register.html
borrowbooks/templates/home/: index.html
borrowbooks/views/: asistente.py  auth.py  crud_libro.py  crud_persona.py  crud_prestamo.py  encargado.py  home.py
borrowbooks/views/auth/: auth.py
borrowbooks/views/borrows/: prestamo_register.py
borrowbooks/views/home/: home.py
borrowbooks/views/inventory/: register.py
borrowbooks/views/users/: asistente.py  encargado.py  gerente.py  register.py
