[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "borrowbooks"
version = "1.0.0"
authors = [
  { name="Santiago Ramirez", email="sarmejias@gmail.com" },
]
description = "First app made using Flask and Python"
readme = "README.md"
license = {text = "BSD-3-Clause"}
classifiers = [
    "Framework :: Flask",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "blinker==1.6.2",
    "click==8.1.3",
    "colorama==0.4.6",
    "Flask==2.3.2",
    "greenlet==2.0.2",
    "itsdangerous==2.1.2",
    "Jinja2==3.1.2",
    "MarkupSafe==2.1.2",
    "psycopg2==2.9.6",
    "python-dotenv==1.0.0",
    "SQLAlchemy==2.0.15",
    "typing_extensions==4.6.3",
    "Werkzeug==2.3.4",
]

